name:                edg-prototype
version:             0.1.0.0
synopsis:            Project for the embedded device generation prototype
description:         Please see README.md
homepage:            https://github.com/githubuser/edg-prototype#readme
license:             BSD3
license-file:        LICENSE
author:              Rohit Ramesh
maintainer:          rohitram@umich.edu
copyright:           2016 Rohit Ramesh
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/githubuser/edg-prototype

-- executable edg-prototype-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , edg-prototype
--   default-language:    Haskell2010

library
  -- Modules exported by the library.
  exposed-modules:
    EDG
    EDG.Algebra
    EDG.Algebra.GenOrd
    EDG.Library
    EDG.Library.Types
    EDG.Library.Types.Range

  -- Modules included in this library but not exported.
  other-modules:
    -- Control.Lens.MakePolyFields

  -- LANGUAGE extensions used by modules in this package.
  default-extensions: 
    MultiParamTypeClasses 
    FunctionalDependencies
    ExistentialQuantification
    GeneralizedNewtypeDeriving 
    DuplicateRecordFields
    OverloadedLabels
    TypeFamilies
    EmptyDataDecls
    TemplateHaskell
    RankNTypes
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    ScopedTypeVariables
    ConstraintKinds
    NamedFieldPuns
    RecordWildCards
    InstanceSigs
    DataKinds
    LambdaCase
    OverloadedStrings
    -- OverloadedLists
    TupleSections

  -- Other library packages from which modules are imported.
  build-depends:
    base >=4.9,
    -- Used for Lens operations 
    lens >= 4.12.3,
    template-haskell >= 2.10,
    -- Lattice Ordering Types
    lattices >= 1.5.0,
    -- Used to help compose and decompose newtypes, and for the corresponding
    -- Utility functions. 
    newtype >= 0.2,
    -- Used to build bindings to z3 and other theorem provers as needed
    sbv >= 5.12,
    -- Basic Containers
    containers,
    -- heaps >= 0.3.2.1,
    -- vector >= 0.10, 
    -- -- Monad Transformers
    -- mtl >= 2.2.1,
    -- transformers >= 0.4.2,
    -- -- Provides tagged monads, so that we can remove all those 
    -- --   fucking `(lift . lift)`s
    -- ether >= 0.3.0.0,
    -- -- Convinient ordered list functions 
    -- data-ordlist >= 0.4.7.0,
    -- -- Used to interleave monadic actions in weird ways 
    -- monad-control >= 1.0.0.4,
    -- template-haskell >= 2.10,
    -- vector >= 0.10,
    -- Pretty Printing of Haskell Datatypes 
    pretty-show

  -- Directories containing source files.
  hs-source-dirs:      
    lib
  
  -- Base language which the package is written in.
  default-language:   
    Haskell2010

  ghc-options: 
    -ddump-splices

test-suite edg-prototype-test
  type: exitcode-stdio-1.0 
  
  hs-source-dirs: test, lib
  
  Main-is: 
    Main.hs 

  default-language:   
    Haskell2010
 
  -- Dpendencies that are solely for TESTING 
  build-depends: 
    hspec >= 1.3,
    QuickCheck >= 2.8

  -- Dependencies that are IDENTICAL to the library dependencies. 
  build-depends:
    base >=4.8 && <4.9,
    -- Used for Lens operations 
    lens >= 4.12.3,
    template-haskell >= 2.10,
    -- Basic Containers
    containers,
    -- heaps >= 0.3.2.1,
    -- vector >= 0.10, 
    -- -- Monad Transformers
    -- mtl >= 2.2.1,
    -- transformers >= 0.4.2,
    -- -- Provides tagged monads, so that we can remove all those 
    -- --   fucking `(lift . lift)`s
    -- ether >= 0.3.0.0,
    -- -- Convinient ordered list functions 
    -- data-ordlist >= 0.4.7.0,
    -- -- Used to interleave monadic actions in weird ways 
    -- monad-control >= 1.0.0.4,
    -- template-haskell >= 2.10,
    -- vector >= 0.10,
    -- Pretty Printing of Haskell Datatypes 
    pretty-show


  -- LANGUAGE extensions used by modules in this package.
  default-extensions: 
    MultiParamTypeClasses 
    FunctionalDependencies
    ExistentialQuantification
    GeneralizedNewtypeDeriving
    DuplicateRecordFields
    OverloadedLabels
    TypeFamilies
    EmptyDataDecls
    TemplateHaskell
    RankNTypes
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    InstanceSigs
    ConstraintKinds
    DataKinds
    LambdaCase
    ScopedTypeVariables
    OverloadedStrings
    -- OverloadedLists
    TupleSections

